<resources>
    <string name="app_name">美食圈</string>
    <string name="Gourmet">美食圈</string>
    <string name="message">消息</string>
    <string name="search">发现</string>
    <string name="my">我</string>
    <string name="text">文本</string>
    <string name="photo">照片</string>
    <string name="take_photo">拍摄</string>
    <string name="video">视频</string>
    <string name="diary">美食日记</string>
    <string name="menu">食谱</string>
    <string name="raiders">攻略</string>
    <string name="share">分享</string>
    <string name="compose">撰写</string>
    <string name="draft">草稿箱</string>
    <string name="customer_service">客服中心</string>
    <string name="my_good">我的点赞</string>
    <string name="collection">收藏</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="address">所在地</string>
    <string name="introduction">简介</string>
    <string name="top">置顶</string>
    <string name="more">更多</string>
    <string name="id">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="my_tip">登录后,你的个人资料显示在这里</string>
    <string name="message_tip">登录后,你的消息信息显示在这里</string>
    <string name="setting">设置</string>
    <string name="change_password">修改密码</string>
    <string name="feedback">反馈意见</string>
    <string name="about_us">关于我们</string>
    <string name="out">退出当前账号</string>
    <string name="comment">评论</string>
    <string name="good">赞</string>
    <string name="bad">踩</string>
    <string name="change_detail">修改个人信息</string>
    <string name="header_img">头像</string>
    <string name="header_change_tip">(点击更换头像)</string>
    <string name="enter">确认</string>
    <string name="cancel">取消</string>
    <string name="choose_photo">选择照片</string>
    <string name="send">发送</string>
    <string name="put">发布</string>
    <string name="share_tip">享你所想</string>

    <string name="test_num"> </string>
    <string name="test_text"> </string>
    <string name="private_type">私有</string>
    <string name="public_type">公开</string>
    <string name="diary_title_tip">请输入日记标题</string>
    <string name="time">时间</string>
    <string name="auth">作者</string>
    <string name="change_back">点击此处更改背景</string>
    <string name="menu_title_tip">请输入食谱名</string>
    <string name="menu_introduction_tip">请输入食谱简介</string>
    <string name="ingredient">食材</string>
    <string name="practice">做法</string>
    <string name="tips">小贴士</string>
    <string name="menu_tips">请输入本食谱的温馨提示(不填则不显示)</string>
    <string name="touch_to_set_cover">点击设置封面</string>
    <string name="clear">清理缓存</string>
    <string name="difficult_tip">难度:</string>
    <string name="elapse_time">耗时:</string>
    <string name="so_easy">非常简单</string>
    <string name="minute">分钟</string>
    <string name="hour">小时</string>
    <string name="zero">0</string>
    <string name="touch_say">按住说话</string>
    <string name="gourmet_share">美食分享</string>
    <string name="comment_user">用户评论</string>
    <string name="is_end">- - - - - 到底啦 - - - - -</string>
    <string name="write_comment">写评论___</string>
    <string name="share_other">分享到其他平台</string>
    <string name="share_wx_people">微信好友</string>
    <string name="share_to">分享至</string>
    <string name="share_friend">朋友圈</string>
    <string name="gourmet_raiders">美食攻略</string>
    <string name="raiders_title_tip">请输入攻略标题</string>
    <string name="tag_type">标签、类型</string>
    <string name="raiders_introduction_tip">请输入攻略简介</string>
    <string name="title_or_name">标题或名称</string>
    <string name="gourmet_address">美食地址</string>
    <string name="my_share">我的分享</string>
    <string name="my_comment">我的评论</string>
    <string name="my_collection">我的收藏</string>
    <string name="check_version">检查更新</string>
    <string name="no_title">无标题</string>
    <string name="delete_this_draft">删除此草稿</string>
    <string name="delete_draft_all">清空草稿箱</string>
    <string name="ta_share">Ta的分享</string>
    <string name="my_top">我的置顶</string>
    <string name="now_top">当前置顶内容</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothing">什么都没有哟</string>
    <string name="search_diary">搜日记</string>
    <string name="search_menu">搜食谱</string>
    <string name="search_raiders">搜攻略</string>
    <string name="local">本地</string>
    <string name="ji">记</string>
    <string name="pu">谱</string>
    <string name="lue">略</string>
    <string name="ben">本</string>
    <string name="find_friend">搜朋友</string>
    <string name="search_key">搜索关键字</string>
    <string name="user_phone">短信验证,快速注册</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="_86">目前仅支持中国+86手机号验证</string>
    <string name="input_code">请输入验证码</string>
    <string name="code">验证码</string>
    <string name="input_user_info">请填写个人信息</string>
    <string name="input_password">请输入账号密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="flash_name">\@Lewis_v</string>
    <string name="complaint">投诉</string>
    <string name="change">修改</string>
    <string name="input_old_password">请输入原密码</string>
    <string name="re_get_code">重新获取验证码(60s)</string>
    <string name="send_message">发送消息</string>
    <string name="feedback_tip">填写您的意见或建议,谢谢您的支持</string>
    <string name="feedback_enter">反馈</string>
    <string name="app_error">程序出了点小问题,已告知程序员了哟~</string>
    <string name="update_notification_tip">下载更新中.....</string>
    <string name="reject_share">被拒绝分享</string>
    <string name="clear_all">清空</string>
    <string name="appeal">申诉</string>
    <string name="appeal_cause">申诉原因</string>
    <string name="account">账号/手机号</string>
    <string name="channel_tip">开启美食之旅</string>
    <string name="audio_receiver_mode">听筒模式</string>
    <string name="save_img">保存照片</string>
    <string name="not_support">此版本不支持此类型消息,请更新APP</string>
    <string name="night_mode">夜间模式</string>
    <string name="voice_chat">语音聊天</string>
</resources>
