<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/dialog_back"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_delete"
        android:textSize="16sp"
        android:background="@drawable/back_change_circle"
        android:text="@string/delete_this_draft"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <TextView
        android:background="@color/dev"
        android:layout_width="match_parent"
        android:layout_height="1px" />
    <TextView
        android:id="@+id/tv_delete_all"
        android:textSize="16sp"
        android:text="@string/delete_draft_all"
        android:background="@drawable/back_change_circle"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <TextView
        android:background="@color/dev"
        android:layout_width="match_parent"
        android:layout_height="1px" />
    <TextView
        android:id="@+id/tv_cancel"
        android:textSize="16sp"
        android:text="@string/cancel"
        android:background="@drawable/back_change_circle"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
</LinearLayout>