<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/dialog_back"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_take"
        android:background="@drawable/ll_back_change"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:text="@string/take_photo"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <View
        android:background="@color/dev"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/tv_choose"
        android:background="@drawable/ll_back_change"
        android:textColor="@color/colorAccent"
        android:text="@string/choose_photo"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <View
        android:background="@color/dev"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/tv_cancel"
        android:background="@drawable/ll_back_change"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
</LinearLayout>
