<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yw.gourmet.ui.share.diary.DiaryActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:contentInsetStart="0dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_cancel"
                android:text="@string/cancel"
                android:gravity="center"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:gravity="center"
                android:text="@string/diary"
                android:textColor="@color/word_black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_send"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/put"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:background="@mipmap/dev"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <EditText
        android:id="@+id/et_title"
        android:layout_margin="10dp"
        android:hint="@string/diary_title_tip"
        android:textColor="@color/word_black"
        android:textSize="20sp"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:gravity="center"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_address"
            android:hint="@string/address"
            android:textSize="14sp"
            android:textColor="@color/word_black"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_time"
            android:hint="@string/time"
            android:textSize="14sp"
            android:textColor="@color/word_black"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_auth"
            android:hint="@string/auth"
            android:textSize="14sp"
            android:textColor="@color/word_black"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_power"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_marginRight="10dp"
            android:text="@string/public_type"
            android:background="@drawable/circle_back"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <jp.wasabeef.richeditor.RichEditor
            android:id="@+id/richeditor_diary"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:id="@+id/img_tool"
            android:visibility="visible"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/add_circle"
            android:tint="@color/colorAccent"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
        <FrameLayout
            android:id="@+id/fl_tool"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="-20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignTop="@+id/img_tool"
            android:layout_alignBottom="@+id/img_tool"
            android:layout_toLeftOf="@+id/img_tool"
            android:layout_toStartOf="@+id/img_tool"
            android:layout_marginEnd="-20dp" />
    </RelativeLayout>
</LinearLayout>
