<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:clickable="true"
    android:orientation="vertical"
    android:background="@color/menu_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:textSize="20sp"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


        <LinearLayout
        android:id="@+id/ll_choose"
        android:layout_gravity="center"
            android:paddingBottom="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/share"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/ll_text"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/share_text"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_photo"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/share_photo"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_take_photo"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/share_take_photo"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/take_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_video"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/share_video"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:text="@string/video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/compose"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/ll_diary"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/diary"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/diary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_menu"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/menu"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_raiders"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/raiders"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/raiders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:background="@color/dev"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:id="@+id/ll_close"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <ImageView
            android:src="@drawable/close"
            android:tint="@color/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
