<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_tip"
        android:text="@string/user_phone"
        android:textStyle="bold"
        android:textSize="23sp"
        android:textColor="@color/word_black"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/_86"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/_86"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/_86">
    <EditText
        android:id="@+id/et_phone"
        android:inputType="phone"
        android:textSize="18sp"
        android:textColor="@color/word_black"
        android:hint="@string/input_phone"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <View
        android:id="@+id/dev"
        app:layout_constraintTop_toBottomOf="@+id/tl_phone"
        app:layout_constraintLeft_toLeftOf="@+id/tl_phone"
        app:layout_constraintRight_toRightOf="@+id/tl_phone"
        android:background="@color/dev"
        android:layout_width="0dp"
        android:layout_height="1px"/>
    <Button
        android:id="@+id/bt_register"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@drawable/back_change_circle_orange"
        app:layout_constraintTop_toBottomOf="@+id/tl_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</android.support.constraint.ConstraintLayout>