<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_window"
    android:orientation="vertical"
    android:background="@drawable/menu_popup_window_back"
    android:layout_marginRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_collect"
        android:background="@drawable/back_change"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/collection"
        android:textColor="@color/close"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:background="@color/dev"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <TextView
        android:id="@+id/tv_share"
        android:background="@drawable/back_change"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/share"
        android:textColor="@color/close"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:background="@color/dev"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:id="@+id/tv_complaint"
        android:background="@drawable/back_change"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/complaint"
        android:textColor="@color/close"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>